# Flask-Test-Website

./: .gitignore  Flask Testing.geany  README.md  pyproject.toml  run.py
instance/: user_database.db
src/my_web_app.egg-info/: PKG-INFO  SOURCES.txt  requires.txt
src/web_application/: app.py  config.py  database.py  routes.py
static/css/: colourful_mode.css  dark_mode.css  enlarged_text.css  light_mode.css  style.css
static/js/: main.js
templates/: 404.html  about.html  animal_info.html  base.html  form.html  index.html  lipsum.html  log_in.html  my_account.html  past_survey_results.html  random_words.html  settings.html  sign_up.html  survey.html
